--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,319 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+/* body */
+body{
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
+  max-width: 100%;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: default;
+
+  background: rgb(218,221,228);
+  background: -moz-linear-gradient(38deg, rgba(218,221,228,1) 0%, rgba(102,119,175,1) 100%);
+  background: -webkit-linear-gradient(38deg, rgba(218,221,228,1) 0%, rgba(102,119,175,1) 100%);
+  background: linear-gradient(38deg, rgba(218,221,228,1) 0%, rgba(102,119,175,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#dadde4",endColorstr="#6677af",GradientType=1); 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+/* navbar */
+.navbar{
+  width: 100%;
+  z-index: 1000;
+  padding: 20px !important;
+  background-color: transparent;
+}
+
+.navbar::after{
+  content: "";
+  position: absolute;
+  top:0;left: 0;right: 0;bottom: 0;
+  z-index: -1;
+  background-color: rgba(15,10,10,.15);
+  backdrop-filter: blur(5px);
+}
+
+.navbar .brand{
+  font-size: 1.8rem !important;
+  font-weight: 900;
+  letter-spacing: 2px;
+
+  color: transparent;
+  background: linear-gradient(38deg, rgba(45,44,54,0.9974025974025974) 0%, rgba(80,106,172,1) 83%);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+}
+
+.navLink{
+  font-size: 1.4rem;
+  font-weight: 800;
+}
+
+.navLink span{
+  
+
+  color: rgba(186,191,205,1);
+  text-shadow: 2px 2px 10px #1a1a1a;
+
+  transition: .4s;
+}
+
+.navLink span:hover,.navLink span:active{
+  color: rgba(249,251,254,1);
+}
+
+.navbar .user{
+  margin: 0px auto;
+  text-align: center;
+  font-size: .9rem;
+  font-weight: 800;
+  margin: 0px 10px;
+  color: rgba(249,251,254,1);
+  text-shadow: 2px 2px 10px #1a1a1a;
+  cursor: default;
+}
+
+.navbar .toggle{
+  color: transparent;
+  background-color: transparent;
+}
+
+/* login */
+
+.loginContent{
+  width: 500px;
+  max-width: 100%;
+  height: 400px;
+  margin: 50px auto;
+  background-color: rgba(15,10,10,.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 25px 25px 80px 80px;
+  box-shadow: 3px 3px 5px rgba(15,10,10,.4);
+}
+
+.loginContent h1{
+  font-size: 2rem;
+  font-weight: 800;
+  color: rgba(249,251,254,1);
+  text-shadow: 2px 2px 10px #1a1a1a;
+}
+
+.loginContent button{
+  margin-top: 50px;
+  padding: 10px 20px;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(15,10,10,.4);
+  background-color: rgba(15,10,10,.15);
+  color: rgba(186,191,205,1);
+  text-shadow: 2px 2px 10px #1a1a1a;
+}
+
+.loginContent button:hover,.loginContent button:active{
+  color: rgba(249,251,254,1);
+  background-color: rgba(15,10,10,.4);
+}
+
+/* create */
+
+form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  margin: 50px auto;
+  width: 500px;
+  max-width: 100%;
+  height: 500px;
+
+  background-color: rgba(15,10,10,.15);
+  
+  border-radius: 50px;
+  box-shadow: 5px 5px 5px rgba(15,10,10,.3);
+}
+
+form h1{
+margin-bottom: 50px;
+
+color: rgba(15,10,10,.6);
+text-shadow: 3px 3px 5px rgba(15,10,10,.15);
+
+font-weight: 700;
+font-size: 2.6rem;
+}
+
+form .inputField{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.inputField input,form textarea{
+  padding: 10px;
+  width: 400px;
+
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgba(15,10,10,.15);
+
+  background-color: rgba(15,10,10,.15);
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.inputField input:focus,form textarea:focus{
+  background-color: rgba(15,10,10,.6);
+}
+
+.inputField textarea{
+  resize: none;
+}
+
+.inputField input[type="submit"]{
+  width: 200px;
+  max-width: 100%;
+
+  background-color: rgba(15,10,10,.15);
+  text-shadow: 3px 3px 5px rgba(15,10,10,.15);
+}
+
+.inputField input[type="submit"]:hover{
+  background-color: rgba(15,10,10,.6);
+}
+
+/* main */
+
+.mainHeader{
+  margin: 50px auto;
+  padding: 0px 10px;
+  text-align: center;
+
+  font-size: 2.6rem;
+  font-weight: 700;
+
+  letter-spacing: 2px;
+
+  color: rgba(15,10,10,.7);
+  text-shadow: 3px 3px 5px rgba(15,10,10,.6);
+}
+
+.mainContent{
+  margin: 50px auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.mainContent .task{
+  margin: 20px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  width: 400px;
+  min-height: 400px;
+  background-color: rgba(15,10,10,.15);
+
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px rgba(15,10,10,.4);
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
+.mainContent .successTask{
+  background-color: rgba(109, 196, 104,1);
+  color: #fff;
+}
+
+.task h1{
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+  font-size: 1.5rem;
+  font-weight: 700;
+  
+  color: rgba(15,10,10,.6);
+  text-shadow: 3px 3px 5px rgba(15,10,10,.4);
+
+  border-bottom: 3px solid rgba(15,10,10,.25);
+
+  border-radius: 20px 20px 0px 0px;
+}
+
+.task h1 span{
+  font-size: 0.8rem;
+  color: rgba(15,10,10,.4);
+  margin-right: 5px;
+}
+
+.task p{
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 5px;
+}
+
+.mainContent .taskManager{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  border-top: 3px solid rgba(15,10,10,.25);
+}
+
+.taskManager button{
+  margin:10px 50px;
+  padding: 10px 50px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgba(15,10,10,.25);
+  color: #fff;
+}
+
+.taskManager .success{
+  background-color: rgba(48, 219, 77,.3);
+}
+
+.taskManager .success:hover,.taskManager .success:active{
+  background-color: rgba(48, 219, 77,.6);
+}
+
+.taskManager .unSuccess{
+  background-color: rgba(210, 219, 31,.3);
+
+}
+.taskManager .unSuccess:hover,.taskManager .unSuccess:active{
+  background-color: rgba(210, 219, 31,.6);
+}
+
+.taskManager .delete{
+  background-color: rgba(224, 18, 18,.3);
+}
+
+.taskManager .delete:hover,.taskManager .delete:active{
+  background-color: rgba(224, 18, 18,.6);
+}
+
+
+
+/* responsive */
+
+@media screen and (max-width:950px) {
+  .mainContent .task{
+    width: 90%;
   }
 }
